# Rusty_Mikan

./: .gitignore  Cargo.toml  LICENSE  README.md  gdb-qemu-debug.sh  qemu-debug.sh  qemu-run.sh
boot/: Cargo.toml  xbuild.sh
boot/mnt/EFI/BOOT/: boot.efi
boot/src/: elf.rs  main.rs
kernel/: Cargo.toml  x86_64-unknown-none-rusty_mikan.json
kernel/.cargo/: config.toml
kernel/src/: console.rs  font.rs  graphics.rs  interrupt.rs  kernel_lib.rs  main.rs
kernel/src/devices/: pci.asm  pci.rs
kernel/src/devices/pci/: pci.asm  pci.rs
kernel/src/kernel_lib/: interruptFramework.rs  interrupt_framework.rs
lib/: Cargo.toml
lib/src/: allocator.rs  lib.rs
