[package]
name = "boot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
goblin = {version = "0.6", default-features = false, features = ["elf32", "elf64", "endian_fd"]}
uefi = {version = "0.19.0", features = ["alloc", "logger"]}
uefi-services = "0.16.0"