[package]
name = "boot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.test]
debug = true

[dependencies]
goblin = {version = "0.6", default-features = false, features = ["elf32", "elf64", "endian_fd"]}
lib = {path = "../lib", features = ["uefi-feature"]}
uefi = {version = "0.19.0", features = ["alloc", "logger"]}
uefi-services = "0.16.0"
log = "0.4"

